# DublinCore

./: CMakeLists.txt  README.md
cmake/: Config.cmake.in  Doxygen.cmake
runner/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  DublinCore.cpp  Element.cpp  Printer.cpp  Render.cpp  Root.cpp
src/include/DublinCore/: DublinCore.h  Element.h  Printer.h  Render.h  Root.h
tests/: CMakeLists.txt  my_tests.cpp
